--- a/src/pages/ClientDashboard/MyCourse/MyCourse.css
+++ b/src/pages/ClientDashboard/MyCourse/MyCourse.css
@@ -1,28 +1,29 @@
-.health-products-b {
+.health-products-c {
     text-align: center;
-    padding: 50px 20px;
+    padding: 50px 0px;
+    margin: 0px auto;
   }
   
-  .health-products-b h1 {
-    font-size: 2.5em;
+  .health-products-c h1 {
+    font-size: 1px;
     /* color: #333; */
   }
   
-  .health-products-b p {
-    font-size: 1.2em;
+  .health-products-c p {
+    font-size: 10px;
     color: #666;
     margin-bottom: 30px;
   }
   
-  .product-grid-b {
+  .product-grid-c {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    max-width: 1200px;
+    gap: 0px;
+    max-width: 800px;
     margin: 0 auto;
   }
   
-  .product-card-b {
+  .product-card-c {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -30,39 +31,39 @@
     transition: transform 0.2s;
   }
   
-  .product-card-b:hover {
-    transform: scale(1.01);
-    box-shadow: 0 16px 20px rgba(0,0,0,0.1);
+  .product-card-c:hover {
+    /* transform: scale(1.01); */
+    /* box-shadow: 0 16px 20px rgba(0,0,0,0.1); */
   }
   
-  .product-card-b img {
+  .product-card-c img {
     width: 100%;
-    height: 240px;
+    height: 170px;
     display: block;
     object-fit: cover;
   }
   
-  .product-card-b h2 {
-    font-size: 1.5em;
+  .product-card-c h2 {
+    font-size: 0.9em;
     color: #333;
     margin: 15px 0 10px;
   }
   
-  .product-card-b p {
+  .product-card-c p {
     font-size: 1em;
     color: #666;
     padding: 0 15px 15px;
   }
   
   @media screen and (max-width:414px) {
-    .product-grid-b {
+    .product-grid-c {
       display:flex;
       flex-direction: column;
     }
     
     }
-    @media screen and (max-width:430px) {
-    .product-grid-b {
+    @media screen and (max-width:px) {
+    .product-grid-c {
       display:flex;
       flex-direction: column;
     }
