--- a/src/components/AdminSidebar/AdminSidebar.css
+++ b/src/components/AdminSidebar/AdminSidebar.css
@@ -22,7 +22,7 @@
   }
   
   .content-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #15aaed;
+    background-color: #487792;
     border-radius: 4px;
   }
   
