--- a/src/pages/CourseDetails/CourseDetails.css
+++ b/src/pages/CourseDetails/CourseDetails.css
@@ -1,3 +1,40 @@
+
+.custom-checkbox {
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    border: 2px solid greenyellow;
+    border-radius: 0.25rem;
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.2s, border-color 0.2s;
+  }
+  
+  .custom-checkbox:checked {
+    background-color: greenyellow;
+    border-color: greenyellow;
+  }
+  
+  .custom-checkbox:checked::after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 3px;
+    width: 0.4rem;
+    height: 0.50rem;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+  @media screen and (max-width: 414px) {
+    .inner-input input{
+      width: 200px;
+      padding-left: 0px;
+  }
+  }
 @media screen and (max-width > 414px) {
     .detail-cont{
         flex-direction: column;
